changed the Grid and added picture

--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
         <nav>
             <div class="logo">
                 Company Logo</div>
-            <!--<div class="container">
-                <input type="text" placeholder="Search...">
-                <div class="search"></div>
-            </div>-->
             <ul class="menu-area">
                 <li><a href="#">Post Request</a></li>
                 <li><a href="#">Services</a></li>
@@ -25,13 +21,12 @@
     </div>
 
     <div class="Web-Limits">
-        
+
         <section class="Hero">
             <div class="Hero-Grid-Container">
                 <div class="Hero-Item Item1">1</div>
-                <div class="Hero-Item Item2">
-                    <img src="/media/prof-pic.png" alt="Hero picture" class="Picture Hero-Section-pic">
-                </div>
+                <img class="Hero-Item Item2" src="/media/example1.JPG" alt="Hero picture"
+                    class="Picture Hero-Section-pic">
                 <div class="Hero-Item Item3">3</div>
             </div>
         </section>
