Hero style document change

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/Nav-Bar-style.css">
+    <link rel="stylesheet" href="style/Hero-Style.css">
 </head>
 
 <body>
+
     <div class="navbar">
         <nav>
             <div class="logo">
@@ -20,25 +22,21 @@
         </nav>
     </div>
 
-    <div class="Web-Limits">
-
-        <section class="Hero">
-            <div class="Hero-Grid-Container">
-                <div class="Hero-Item Item1">1</div>
-                <img class="Hero-Item Item2" src="/media/example1.JPG" alt="Hero picture"
-                    class="Picture Hero-Section-pic">
-                <div class="Hero-Item Item3">3</div>
+    <section class="Hero">
+        <div class="Hero-Grid-Container">
+            <div class="Hero-Item Item1">
+                <h1 id="Hero-Heading" >BUILD YOUR METAVERSE</h1>
+                <a>We help you to build your own Metaverse by offering the best services our professionals have</a>
             </div>
-        </section>
+            <div class="Hero-Item Item2 Picture">2</div>
+            <div class="Hero-Item Hero-Button">3</div>
+        </div>
+    </section>
 
-
-
-
-        <section id="Most-Popular-Services"></section>
-        <section id="Editors-Choice"></section>
-        <section id="Top-Creators"></section>
-        <section id="Footer"></section>
-    </div>
+    <section id="Most-Popular-Services"></section>
+    <section id="Editors-Choice"></section>
+    <section id="Top-Creators"></section>
+    <section id="Footer"></section>
 
 </body>
 
