--- a/index.html
+++ b/index.html
@@ -25,10 +25,20 @@
     <section class="Hero">
         <div class="Hero-Grid-Container">
             <div class="Hero-Item Item1">
-                <h1 id="Hero-Heading" >BUILD YOUR METAVERSE</h1>
+                <h1 id="Hero-Heading">BUILD YOUR METAVERSE</h1>
                 <a>We help you to build your own Metaverse by offering the best services our professionals have</a>
             </div>
-            <div class="Hero-Item Item2 Picture">2</div>
+            <div class="Hero-Item Hero-Card-div">
+
+                <div class="card">
+                    <img src="media/example1.JPG" alt="Avatar" style="width:100%">
+                    <div class="container">
+                        <h4><b>Jane Doe</b></h4>
+                        <p>Interior Designer</p>
+                    </div>
+                </div>
+
+            </div>
             <div class="Hero-Item Hero-Button">3</div>
         </div>
     </section>
