Color chnaged, Button added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
                 </div>
 
             </div>
-            <div class="Hero-Item Hero-Button">3</div>
+
+            <div class="Hero-Buttons-div">
+                <button type="button" class="Hero-Item Hero-Button find-talent-button">
+                    Find Talent
+                </button>
+                <button type="button" class="Hero-Item Hero-Button find-work-button">
+                    Find Work
+                </button>
+            </div>
         </div>
     </section>
 
