--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
         <nav>
             <div class="logo">
-                Company Logo</div>
+                Zybr Tech</div>
             <ul class="menu-area">
                 <li><a href="#">Post Request</a></li>
                 <li><a href="#">Services</a></li>
