@media changes. adjustments for different diplay sizes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="Hero">
         <div class="Hero-Grid-Container">
-            <div class="Hero-Item Item1">
+            <div class="Hero-Item Hero-Heading-and-message">
                 <h1 id="Hero-Heading">BUILD YOUR METAVERSE</h1>
                 <a>We help you to build your own Metaverse by offering the best services our professionals have</a>
             </div>
