New Design changes

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
     <section class="Hero">
         <div class="Hero-Grid-Container">
+
             <div class="Hero-Item Hero-Heading-and-message">
-                <h1 id="Hero-Heading">BUILD YOUR METAVERSE</h1>
-                <a>We help you to build your own Metaverse by offering the best services our professionals have</a>
+                <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
             </div>
+
             <div class="Hero-Item Hero-Card-div">
 
                 <div class="card">
@@ -41,13 +42,13 @@
             </div>
 
             <div class="Hero-Buttons-div">
+                
                 <button type="button" class="Hero-Item Hero-Button find-talent-button">
-                    Find Talent
+                    Find Service
                 </button>
-                <button type="button" class="Hero-Item Hero-Button find-work-button">
-                    Find Work
-                </button>
+
             </div>
+            
         </div>
     </section>
 
