Changed most of the important stuff

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
     <div class="navbar">
         <nav>
-            <div class="logo">
-                Zybr Tech</div>
+            <div class="logo">Zybr Tech</div>
             <ul class="menu-area">
                 <li><a href="#">Post Request</a></li>
                 <li><a href="#">Services</a></li>
@@ -25,38 +24,28 @@
     <section class="Hero">
         <div class="Hero-Grid-Container">
 
-            <div class="Hero-Item Hero-Heading-and-message">
+            <div class="Hero-Item Hero-Message">
                 <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
-            </div>
-
-            <div class="Hero-Item Hero-Card-div">
-
-                <div class="card">
-                    <img src="media/example1.JPG" alt="Avatar" style="width:100%">
-                    <div class="container">
-                        <h4><b>Jane Doe</b></h4>
-                        <p>Interior Designer</p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="Hero-Buttons-div">
-                
                 <button type="button" class="Hero-Item Hero-Button find-talent-button">
                     Find Service
                 </button>
-
             </div>
-            
+
+            <div class="Hero-Item Hero-Card-div">
+                <div class="card">
+                    <img class="Hero-image" src="media/example1.JPG" alt="Avatar" style="width:100%">
+                    <div class="container">
+                        <div>
+                            <h4 id="text1"><b>Hiki_Stark</b></h4>
+                            <p id="text2" >Interior Designer</p>
+                        </div>
+                        <p id="text3">3.00 ETH</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
-    <section id="Most-Popular-Services"></section>
-    <section id="Editors-Choice"></section>
-    <section id="Top-Creators"></section>
-    <section id="Footer"></section>
-
 </body>
-
 </html>
