Description part is added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/Nav-Bar-style.css">
     <link rel="stylesheet" href="style/Hero-Style.css">
+    <link rel="stylesheet" href="style/Description-section.css">
 </head>
 
 <body>
@@ -43,6 +44,14 @@
                     </div>
                 </div>
             </div>
+
+        </div>
+    </section>
+
+    <section class="Description">
+        <div class="Des-Container">
+
+            <img class=""
 
         </div>
     </section>
