2 new sections added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style/Nav-Bar-style.css">
     <link rel="stylesheet" href="style/Hero-Style.css">
     <link rel="stylesheet" href="style/Description-section.css">
+    <link rel="stylesheet" href="style\what-are-we-section.css">
+    <link rel="stylesheet" href="style/Tech-We-Use.css">
 </head>
 
 <body>
@@ -28,7 +30,7 @@
             <div class="Hero-Item Hero-Message">
                 <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
                 <button type="button" class="Hero-Item Hero-Button find-talent-button">
-                    Find Service
+                    Find Services
                 </button>
             </div>
 
@@ -38,7 +40,7 @@
                     <div class="container">
                         <div>
                             <h4 id="text1"><b>Hiki_Stark</b></h4>
-                            <p id="text2" >Interior Designer</p>
+                            <p id="text2">Interior Designer</p>
                         </div>
                         <p id="text3">3.00 ETH</p>
                     </div>
@@ -51,10 +53,65 @@
     <section class="Description">
         <div class="Des-Container">
 
-            <img class="Description-image1" src="media/Blue/Action+euro_symbol0004.png" alt="Avatar" style="width:100%">
+            <img class="Description-image Dimage1"
+                src="media/Human pngs/map-finding-route-usi-in-mobileng-navigating-on-maps.png" alt="Avatar">
+            <a class="Dimage1explan">You apply to the Artist</a>
+            <img class="Description-image Dimagearr1" src="media\noun-arrow-2841210.svg" alt="Avatar">
+            <a class="Dimage2explan">Artist starts working on it</a>
+            <img class="Description-image Dimage2" src="media/Human pngs/woman-watching-paintings-at-an-art-museum.png"
+                alt="Avatar">
+            <img class="Description-image Dimage3" src="media\Human pngs\polygon.png" alt="Avatar">
+            <img class="Description-image Dimage4" src="media\Human pngs\cryptocurrency-certificate.png" alt="Avatar">
+            <img class="Description-image Dimage5" src="media\Human pngs\cryptocurrency-art.png" alt="Avatar">
+            <img class="Description-image Dimage6" src="media\Human pngs\yes.png" alt="Avatar">
+        </div>
+    </section>
 
+    <section class="WhatAreWe">
+        <div class="WAW-container">
+            <a>We have all the services that are related to Metaverse. We are the architects of the Metaverse. <br>
+                You can become service provider or use services others offer. Real life services are also possible.</a>
+        </div>
+    </section>
+
+    <section class="Tech-We-Use">
+        <div class="TWU-section">
+
+            <h1 id="TWU-Header">
+                TECH WE USE:
+            </h1>
+
+            <div class="TWU-grid-for-boxes">
+
+                <div>
+                    <div class="TWU-Tech-Box TWU-Box-1">
+                        <a class="TWU-Box-Text">ETH</a>
+                        <a class="TWU-Box-Text">MATIC</a>
+                        <a class="TWU-Box-Text">ADA</a>
+                        <a class="TWU-Box-Text">SOL</a>
+                    </div>
+                    <a>Cryptocoin</a>
+                </div>
+
+                <div>
+                    <div class="TWU-Tech-Box TWU-Box-2">
+                        <a class="TWU-Box-Text">ETHEREUM</a>
+                        <a class="TWU-Box-Text">POLYGON</a>
+                    </div>
+                    <a>Blochain<br>Smartcontracts</a>
+                </div>
+
+                <div>
+                    <div class="TWU-Tech-Box TWU-Box-3">
+                        <img class="TWU-image TWU-NFTMLogo" src="media\NFT-stuff\nft-logo.png" alt="Nft Manager logo">
+                    </div>
+                    <a>Universal<br>NFT Manager</a>
+                </div>
+
+            </div>
         </div>
     </section>
 
 </body>
+
 </html>
