Colors changed to be more easier to work with

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
             <div class="TWU-grid-for-boxes">
 
-                <div>
+                <div class="TWU-grids TWU-grid-1">
                     <div class="TWU-Tech-Box TWU-Box-1">
                         <a class="TWU-Box-Text">ETH</a>
                         <a class="TWU-Box-Text">MATIC</a>
@@ -93,7 +93,7 @@
                     <a>Cryptocoin</a>
                 </div>
 
-                <div>
+                <div class="TWU-grids TWU-grid-2">
                     <div class="TWU-Tech-Box TWU-Box-2">
                         <a class="TWU-Box-Text">ETHEREUM</a>
                         <a class="TWU-Box-Text">POLYGON</a>
@@ -101,7 +101,7 @@
                     <a>Blochain<br>Smartcontracts</a>
                 </div>
 
-                <div>
+                <div class="TWU-grids TWU-grid-3">
                     <div class="TWU-Tech-Box TWU-Box-3">
                         <img class="TWU-image TWU-NFTMLogo" src="media\NFT-stuff\nft-logo.png" alt="Nft Manager logo">
                     </div>
