--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/Description-section.css">
     <link rel="stylesheet" href="style\what-are-we-section.css">
     <link rel="stylesheet" href="style/Tech-We-Use.css">
+    <link rel="stylesheet" href="style/Footer.css">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
     </div>
 
     <section class="Hero">
-        <div class="Hero-Grid-Container">
+        <div class="Hero-Grid-Container Border-dashed">
 
             <div class="Hero-Item Hero-Message">
                 <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
@@ -51,7 +52,7 @@
     </section>
 
     <section class="Description">
-        <div class="Des-Container">
+        <div class="Des-Container Border-dashed">
 
             <img class="Description-image Dimage1"
                 src="media/Human pngs/map-finding-route-usi-in-mobileng-navigating-on-maps.png" alt="Avatar">
@@ -68,14 +69,14 @@
     </section>
 
     <section class="WhatAreWe">
-        <div class="WAW-container">
+        <div class="WAW-container Border-dashed">
             <a>We have all the services that are related to Metaverse. We are the architects of the Metaverse. <br>
                 You can become service provider or use services others offer. Real life services are also possible.</a>
         </div>
     </section>
 
     <section class="Tech-We-Use">
-        <div class="TWU-section">
+        <div class="TWU-section Border-dashed">
 
             <h1 id="TWU-Header">
                 TECH WE USE:
@@ -111,6 +112,65 @@
             </div>
         </div>
     </section>
+
+    <!-- Site footer -->
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <h6>About</h6>
+                    <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative to help the
+                        upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or
+                        snippets as the code wants to be simple. We will help programmers build up concepts in different
+                        programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android,
+                        SQL and Algorithm.</p>
+                </div>
+
+                <div class="col-xs-6 col-md-3">
+                    <h6>Categories</h6>
+                    <ul class="footer-links">
+                        <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
+                        <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
+                        <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
+                        <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
+                        <li><a href="http://scanfcode.com/category/android/">Android</a></li>
+                        <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-xs-6 col-md-3">
+                    <h6>Quick Links</h6>
+                    <ul class="footer-links">
+                        <li><a href="http://scanfcode.com/about/">About Us</a></li>
+                        <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
+                        <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
+                        <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
+                        <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-6 col-xs-12">
+                    <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
+                        <a href="#">Scanfcode</a>.
+                    </p>
+                </div>
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <ul class="social-icons">
+                        <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- partial -->
 
 </body>
 
