adjuste small details on footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <!-- FOOTER START -->
+    <!-- FOOTER -->
     <div class="footer">
         <div class="contain">
             <div class="col">
@@ -179,7 +179,6 @@
             <div class="clearfix"></div>
         </div>
     </div>
-    <!-- END OF FOOTER -->
 
 </body>
 
