Fixed centering issue in TWU boxes "Temporarely"

--- a/index.html
+++ b/index.html
@@ -86,18 +86,22 @@
 
                 <div class="TWU-grids TWU-grid-1">
                     <div class="TWU-Tech-Box TWU-Box-1">
-                        <a class="TWU-Box-Text">ETH</a>
-                        <a class="TWU-Box-Text">MATIC</a>
-                        <a class="TWU-Box-Text">ADA</a>
-                        <a class="TWU-Box-Text">SOL</a>
+                        <div class="TWU-Tech-Box-div">
+                            <a class="TWU-Box-Text">ETHER</a>
+                            <a class="TWU-Box-Text">MATIC</a>
+                            <a class="TWU-Box-Text">CARDANO</a>
+                            <a class="TWU-Box-Text">SOLANA</a>
+                        </div>
                     </div>
                     <a>Cryptocoin</a>
                 </div>
 
                 <div class="TWU-grids TWU-grid-2">
                     <div class="TWU-Tech-Box TWU-Box-2">
-                        <a class="TWU-Box-Text">ETHEREUM</a>
-                        <a class="TWU-Box-Text">POLYGON</a>
+                        <div class="TWU-Tech-Box-div">
+                            <a class="TWU-Box-Text">ETHEREUM</a>
+                            <a class="TWU-Box-Text">POLYGON</a>
+                        </div>
                     </div>
                     <a>Blochain<br>Smartcontracts</a>
                 </div>
@@ -110,6 +114,7 @@
                 </div>
 
             </div>
+
         </div>
     </section>
 
