--- a/index.html
+++ b/index.html
@@ -85,32 +85,48 @@
             <div class="TWU-grid-for-boxes">
 
                 <div class="TWU-grids TWU-grid-1">
-                    <div class="TWU-Tech-Box TWU-Box-1">
-                        <div class="TWU-Tech-Box-div">
-                            <a class="TWU-Box-Text">ETHER</a>
-                            <a class="TWU-Box-Text">MATIC</a>
-                            <a class="TWU-Box-Text">CARDANO</a>
-                            <a class="TWU-Box-Text">SOLANA</a>
+                    <div class="TWU-grids-in">
+                        <div class="TWU-Tech-Box TWU-Box-1">
+                            <div class="TWU-Tech-Box-div">
+                                <a class="TWU-Box-Text">ETHER</a>
+                                <a class="TWU-Box-Text">MATIC</a>
+                                <a class="TWU-Box-Text">CARDANO</a>
+                                <a class="TWU-Box-Text">SOLANA</a>
+                            </div>
+                        </div>
+                        <div class="TWU-Tech-Box-Title-div">
+                            <a class="TWU-Tech-Box-Title">Cryptocoin</a>
                         </div>
                     </div>
-                    <a>Cryptocoin</a>
+
                 </div>
 
                 <div class="TWU-grids TWU-grid-2">
-                    <div class="TWU-Tech-Box TWU-Box-2">
-                        <div class="TWU-Tech-Box-div">
-                            <a class="TWU-Box-Text">ETHEREUM</a>
-                            <a class="TWU-Box-Text">POLYGON</a>
+                    <div class="TWU-grids-in">
+                        <div class="TWU-Tech-Box TWU-Box-2">
+                            <div class="TWU-Tech-Box-div">
+                                <a class="TWU-Box-Text">ETHEREUM</a>
+                                <a class="TWU-Box-Text">POLYGON</a>
+                            </div>
+                        </div>
+                        <div class="TWU-Tech-Box-Title-div">
+                            <a class="TWU-Tech-Box-Title">Blochain<br>Smartcontracts</a>
                         </div>
                     </div>
-                    <a>Blochain<br>Smartcontracts</a>
+
                 </div>
 
                 <div class="TWU-grids TWU-grid-3">
-                    <div class="TWU-Tech-Box TWU-Box-3">
-                        <img class="TWU-image TWU-NFTMLogo" src="media\NFT-stuff\nft-logo.png" alt="Nft Manager logo">
+                    <div class="TWU-grids-in">
+                        <div class="TWU-Tech-Box TWU-Box-3">
+                            <img class="TWU-image TWU-NFTMLogo" src="media\NFT-stuff\nft-logo.png"
+                                alt="Nft Manager logo">
+                        </div>
+                        <div class="TWU-Tech-Box-Title-div">
+                            <a class="TWU-Tech-Box-Title">Universal<br>NFT Manager</a>
+                        </div>
                     </div>
-                    <a>Universal<br>NFT Manager</a>
+
                 </div>
 
             </div>
