--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="col">
                 <h1>Resources</h1>
                 <ul>
-                    <li>Webmail</li>
+                    <li><a href="mailto:hikistark@gmail.com">Webmail</a></li>
                     <li>Redeem code</li>
                     <li>WHOIS lookup</li>
                     <li>Site map</li>
