Steps section is added to the page and Description section is commented out

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style\what-are-we-section.css">
     <link rel="stylesheet" href="style/Tech-We-Use.css">
     <link rel="stylesheet" href="style/Footer.css">
+    <link rel="stylesheet" href="style/Steps.css">
 </head>
 
 <body>
@@ -51,7 +52,7 @@
         </div>
     </section>
 
-    <section class="Description">
+    <!-- <section class="Description">
         <div class="Des-Container Border-dashed">
 
             <img class="Description-image Dimage1"
@@ -66,17 +67,65 @@
             <img class="Description-image Dimage5" src="media\Human pngs\cryptocurrency-art.png" alt="Avatar">
             <img class="Description-image Dimage6" src="media\Human pngs\yes.png" alt="Avatar">
         </div>
-    </section>
+    </section> -->
 
     <section class="WhatAreWe">
-        <div class="WAW-container Border-dashed">
+        <div class="Section-Container WAW-container Border-dashed">
             <a>We have all the services that are related to Metaverse. We are the architects of the Metaverse. <br>
                 You can become service provider or use services others offer. Real life services are also possible.</a>
         </div>
     </section>
 
+    <section class="Steps-Section">
+        <div class="Section-Container Border-dashed">
+            <div class="Steps-Headline">
+                <span class="get-your-business-online steps-headline-1">Tools to Build</span>
+            </div>
+            <div class="Steps-Content">
+                <div class="Steps-step-picture-div">
+                    <img class="Steps-step-picture" src="media/example1.JPG" alt="Step Picture">
+                </div>
+                <div class="Steps-list-wrapper">
+                    <ol class="Steps-List">
+                        <li class="Steps-step step-1">
+                            <div class="Steps-step-number-div">
+                                <p class="step-number-1">1</p>
+                            </div>
+                            <div class="Steps-step-description">
+                                <p class="Steps-step-description-Headline">Find Services</p>
+                                <p class="Steps-step-description-text">Select from any of our industry-leading Services, designers, and
+                                    Artists that best fit your personal style and professional needs.</p>
+                            </div>
+                        </li>
+                        <li class="Steps-step step-2">
+                            <div class="Steps-step-number-div">
+                                <p class="step-number-2">2</p>
+                            </div>
+                            <div class="Steps-step-description">
+                                <p class="Steps-step-description-Headline">Offer Services</p>
+                                <p class="Steps-step-description-text">Explore which tools you want to add—whether it’s setting up an online store,
+                                    booking services, or adding your favorite third-party extensions.</p>
+                            </div>
+                        </li>
+                        <li class="Steps-step step-3">
+                            <div class="Steps-step-number-div">
+                                <p class="step-number-3">3</p>
+                            </div>
+                            <div class="Steps-step-description">
+                                <p class="Steps-step-description-Headline">Market your Metaverse</p>
+                                <p class="Steps-step-description-text">Stand out in every inbox and social feed. On-brand email campaigns and
+                                    social
+                                    tools make it easy to retain customers and grow your audience.</p>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="Tech-We-Use">
-        <div class="TWU-section Border-dashed">
+        <div class="Section-Container TWU-section">
 
             <h1 id="TWU-Header">
                 TECH WE USE:
