Adjusted and designed Steps Section and added Montserrat Font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/Nav-Bar-style.css">
     <link rel="stylesheet" href="style/Hero-Style.css">
@@ -27,7 +32,7 @@
     </div>
 
     <section class="Hero">
-        <div class="Hero-Grid-Container Border-dashed">
+        <div class="Hero-Grid-Container">
 
             <div class="Hero-Item Hero-Message">
                 <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
@@ -77,9 +82,9 @@
     </section>
 
     <section class="Steps-Section">
-        <div class="Section-Container Border-dashed">
-            <div class="Steps-Headline">
-                <span class="get-your-business-online steps-headline-1">Tools to Build</span>
+        <div class="Section-Container Steps-Container">
+            <div class="Steps-Headline-div">
+                <span class="Steps-Headline">Steps to Build</span>
             </div>
             <div class="Steps-Content">
                 <div class="Steps-step-picture-div">
@@ -89,31 +94,34 @@
                     <ol class="Steps-List">
                         <li class="Steps-step step-1">
                             <div class="Steps-step-number-div">
-                                <p class="step-number-1">1</p>
+                                <p class="step-number-index">1</p>
                             </div>
                             <div class="Steps-step-description">
                                 <p class="Steps-step-description-Headline">Find Services</p>
-                                <p class="Steps-step-description-text">Select from any of our industry-leading Services, designers, and
+                                <p class="Steps-step-description-text">Select from any of our industry-leading Services,
+                                    designers, and
                                     Artists that best fit your personal style and professional needs.</p>
                             </div>
                         </li>
                         <li class="Steps-step step-2">
                             <div class="Steps-step-number-div">
-                                <p class="step-number-2">2</p>
+                                <p class="step-number-index">2</p>
                             </div>
                             <div class="Steps-step-description">
                                 <p class="Steps-step-description-Headline">Offer Services</p>
-                                <p class="Steps-step-description-text">Explore which tools you want to add—whether it’s setting up an online store,
+                                <p class="Steps-step-description-text">Explore which tools you want to add—whether it’s
+                                    setting up an online store,
                                     booking services, or adding your favorite third-party extensions.</p>
                             </div>
                         </li>
                         <li class="Steps-step step-3">
                             <div class="Steps-step-number-div">
-                                <p class="step-number-3">3</p>
+                                <p class="step-number-index">3</p>
                             </div>
                             <div class="Steps-step-description">
                                 <p class="Steps-step-description-Headline">Market your Metaverse</p>
-                                <p class="Steps-step-description-text">Stand out in every inbox and social feed. On-brand email campaigns and
+                                <p class="Steps-step-description-text">Stand out in every inbox and social feed.
+                                    On-brand email campaigns and
                                     social
                                     tools make it easy to retain customers and grow your audience.</p>
                             </div>
@@ -159,7 +167,7 @@
                             </div>
                         </div>
                         <div class="TWU-Tech-Box-Title-div">
-                            <a class="TWU-Tech-Box-Title">Blochain<br>Smartcontracts</a>
+                            <a class="TWU-Tech-Box-Title">Blockchain<br>Smartcontracts</a>
                         </div>
                     </div>
 
