--- a/login-page.html
+++ b/login-page.html
@@ -38,29 +38,9 @@
         <div class="container-login100" style="background-color: grey;">
             <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
                 <form class="login100-form validate-form flex-sb flex-w">
-                    <span class="login100-form-title p-b-53">
+                    <span class="login100-form-title p-b-15">
                         Sign In With
                     </span>
-
-                    <a href="#" class="btn-face m-b-20">
-                        <i class="fa fa-facebook-official"></i>
-                        Facebook
-                    </a>
-
-                    <a href="#" class="btn-google m-b-20">
-                        <img src="media/icons/icon-google.png" alt="GOOGLE">
-                        Google
-                    </a>
-
-                    <a href="#" class="btn-google m-b-20">
-                        <img src="media/icons/icon-github-dark.png" alt="GITHUB">
-                        Github
-                    </a>
-
-                    <a href="#" class="btn-google m-b-20">
-                        <img src="media/icons/metamask-fox.svg" alt="METAMASK">
-                        Wallet
-                    </a>
 
                     <div class="p-t-31 p-b-9">
                         <span class="txt1">
@@ -91,6 +71,32 @@
                             Sign In
                         </button>
                     </div>
+
+                    <div class="w-full text-center p-b-20">
+                        <span class="text-xl-center">
+                            Or with
+                        </span>
+                    </div>
+
+                    <a href="#" class="btn-face m-b-20">
+                        <i class="fa fa-facebook-official"></i>
+                        Facebook
+                    </a>
+
+                    <a href="#" class="btn-google m-b-20">
+                        <img src="media/icons/icon-google.png" alt="GOOGLE">
+                        Google
+                    </a>
+
+                    <a href="#" class="btn-google m-b-20">
+                        <img src="media/icons/icon-github-dark.png" alt="GITHUB">
+                        Github
+                    </a>
+
+                    <a href="#" class="btn-google m-b-20">
+                        <img src="media/icons/metamask-fox.svg" alt="METAMASK">
+                        Wallet
+                    </a>
 
                     <div class="w-full text-center p-t-55">
                         <span class="txt2">
