--- a/login-page.html
+++ b/login-page.html
@@ -35,18 +35,20 @@
 
 <body>
     <div class="limiter">
-        <div class="container-login100" style="background-color: grey;">
+        <div class="container-login100" style="background-color: #eeeeee;">
             <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
                 <form class="login100-form validate-form flex-sb flex-w">
+
                     <span class="login100-form-title p-b-15">
                         Sign In With
                     </span>
 
                     <div class="p-t-31 p-b-9">
                         <span class="txt1">
-                            Username
+                            Email or Username
                         </span>
                     </div>
+
                     <div class="wrap-input100 validate-input" data-validate="Username is required">
                         <input class="input100" type="text" name="username">
                         <span class="focus-input100"></span>
@@ -61,6 +63,7 @@
                             Forgot?
                         </a>
                     </div>
+
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
                         <input class="input100" type="password" name="pass">
                         <span class="focus-input100"></span>
@@ -107,6 +110,7 @@
                             Sign up now
                         </a>
                     </div>
+
                 </form>
             </div>
         </div>
@@ -121,6 +125,7 @@
     <script src="vendor/animsition/js/animsition.min.js"></script>
     <!--===============================================================================================-->
     <script src="vendor/bootstrap/js/popper.js"></script>
+    <!--===============================================================================================-->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <!--===============================================================================================-->
     <script src="vendor/select2/select2.min.js"></script>
