--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="eng">
 
 <head>
+    <meta charset="utf-8">
+    <title>Main Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/Nav-Bar-style.css">
-    <link rel="stylesheet" href="style/Footer.css">
-    <link rel="stylesheet" href="style/main-page-style/Hero-Style.css">
-    <link rel="stylesheet" href="style/main-page-style/Description-section.css">
-    <link rel="stylesheet" href="style/main-page-style/what-are-we-section.css">
-    <link rel="stylesheet" href="style/main-page-style/Tech-We-Use.css">
-    <link rel="stylesheet" href="style/main-page-style/Steps.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Nav-Bar-style.css">
+    <link rel="stylesheet" href="css/Footer.css">
+    <link rel="stylesheet" href="css/main-page-style/Hero-Style.css">
+    <link rel="stylesheet" href="css/main-page-style/Description-section.css">
+    <link rel="stylesheet" href="css/main-page-style/what-are-we-section.css">
+    <link rel="stylesheet" href="css/main-page-style/Tech-We-Use.css">
+    <link rel="stylesheet" href="css/main-page-style/Steps.css">
 </head>
 
 <body>
