--- a/login-page.html
+++ b/login-page.html
@@ -7,9 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login Page</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/Nav-Bar-style.css">
-    <link rel="stylesheet" href="style/Login-Page.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Nav-Bar-style.css">
+    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="css/Login-page.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
@@ -29,8 +30,6 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
     <!--===============================================================================================-->
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
