--- a/Registration-page.html
+++ b/Registration-page.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login Page</title>
+    <title>Register Page</title>
     <link rel="stylesheet" href="css/Main.css">
     <link rel="stylesheet" href="css/Nav-Bar-style.css">
     <link rel="stylesheet" type="text/css" href="css/util.css">
@@ -39,17 +39,28 @@
                 <form class="login100-form validate-form flex-sb flex-w">
 
                     <span class="login100-form-title p-b-15">
-                        Sign In With
+                        Register
                     </span>
 
                     <div class="p-t-31 p-b-9">
                         <span class="txt1">
-                            Email or Username
+                            Email
                         </span>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Username is required">
-                        <input class="input100" type="text" name="username">
+                        <input class="input100" type="text" name="Email">
+                        <span class="focus-input100"></span>
+                    </div>
+
+                    <div class="p-t-13 p-b-9">
+                        <span class="txt1">
+                            Username
+                        </span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Password is required">
+                        <input class="input100" type="username" name="username">
                         <span class="focus-input100"></span>
                     </div>
 
@@ -57,10 +68,6 @@
                         <span class="txt1">
                             Password
                         </span>
-
-                        <a href="#" class="txt2 bo1 m-l-5">
-                            Forgot?
-                        </a>
                     </div>
 
                     <div class="wrap-input100 validate-input" data-validate="Password is required">
@@ -70,13 +77,13 @@
 
                     <div class="container-login100-form-btn m-t-17">
                         <button class="login100-form-btn">
-                            Sign In
+                            Register
                         </button>
                     </div>
 
                     <div class="w-full text-center p-b-20">
                         <span class="text-xl-center">
-                            Or with
+                            Or Login with
                         </span>
                     </div>
 
@@ -105,7 +112,7 @@
                             Not a member?
                         </span>
 
-                        <a href="Registration-page.html" class="txt2 bo1">
+                        <a href="#" class="txt2 bo1">
                             Sign up now
                         </a>
                     </div>
