--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Main.css">
     <link rel="stylesheet" href="css/Nav-Bar-style.css">
     <link rel="stylesheet" href="css/Footer.css">
     <link rel="stylesheet" href="css/main-page-style/Hero-Style.css">
