--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
             <div class="Hero-Item Hero-Message">
                 <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
-                <button type="button" class="Hero-Item Hero-Button find-talent-button">
-                    Find Services
-                </button>
+                <form action="https://www.w3docs.com/">
+                    <button type="button" class="Hero-Item Hero-Button find-talent-button">
+                        Find Services
+                    </button>
+                </form>
             </div>
 
             <div class="Hero-Item Hero-Card-div">
