Removed unused and complex components to start building simple website

--- a/index.html
+++ b/index.html
@@ -3,26 +3,19 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Main Page</title>
+    <title>Multroid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <link rel="stylesheet" href="css/Main.css">
-    <link rel="stylesheet" href="css/Nav-Bar-style.css">
-    <link rel="stylesheet" href="css/Footer.css">
-    <link rel="stylesheet" href="css/main-page-style/Hero-Style.css">
-    <link rel="stylesheet" href="css/main-page-style/Description-section.css">
-    <link rel="stylesheet" href="css/main-page-style/what-are-we-section.css">
-    <link rel="stylesheet" href="css/main-page-style/Tech-We-Use.css">
-    <link rel="stylesheet" href="css/main-page-style/Steps.css">
 </head>
 
 <body>
 
     <div class="navbar">
         <nav>
-            <div class="logo">Zybr Tech</div>
+            <div class="logo">Multroid</div>
             <ul class="menu-area">
                 <li><a href="#">Post Request</a></li>
                 <li><a href="#">Services</a></li>
@@ -32,165 +25,6 @@
     </div>
 
     <section class="Hero">
-        <div class="Hero-Grid-Container">
-
-            <div class="Hero-Item Hero-Message">
-                <h1 id="Hero-Heading">BUILD<br> YOUR OWN <br> METAVERSE</h1>
-                <form action="https://www.w3docs.com/">
-                    <button type="button" class="Hero-Item Hero-Button find-talent-button">
-                        Find Services
-                    </button>
-                </form>
-            </div>
-
-            <div class="Hero-Item Hero-Card-div">
-                <div class="card">
-                    <img class="Hero-image" src="media/example1.JPG" alt="Avatar" style="width:100%">
-                    <div class="container">
-                        <div>
-                            <h4 id="text1"><b>Hiki_Stark</b></h4>
-                            <p id="text2">Interior Designer</p>
-                        </div>
-                        <p id="text3">3.00 ETH</p>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- <section class="Description">
-        <div class="Des-Container Border-dashed">
-
-            <img class="Description-image Dimage1"
-                src="media/Human pngs/map-finding-route-usi-in-mobileng-navigating-on-maps.png" alt="Avatar">
-            <a class="Dimage1explan">You apply to the Artist</a>
-            <img class="Description-image Dimagearr1" src="media\noun-arrow-2841210.svg" alt="Avatar">
-            <a class="Dimage2explan">Artist starts working on it</a>
-            <img class="Description-image Dimage2" src="media/Human pngs/woman-watching-paintings-at-an-art-museum.png"
-                alt="Avatar">
-            <img class="Description-image Dimage3" src="media\Human pngs\polygon.png" alt="Avatar">
-            <img class="Description-image Dimage4" src="media\Human pngs\cryptocurrency-certificate.png" alt="Avatar">
-            <img class="Description-image Dimage5" src="media\Human pngs\cryptocurrency-art.png" alt="Avatar">
-            <img class="Description-image Dimage6" src="media\Human pngs\yes.png" alt="Avatar">
-        </div>
-    </section> -->
-
-    <section class="WhatAreWe">
-        <div class="Section-Container WAW-container Border-dashed">
-            <a>We have all the services that are related to Metaverse. We are the architects of the Metaverse. <br>
-                You can become service provider or use services others offer. Real life services are also possible.</a>
-        </div>
-    </section>
-
-    <section class="Steps-Section">
-        <div class="Section-Container Steps-Container">
-            <div class="Steps-Headline-div">
-                <span class="Steps-Headline">Steps to Build</span>
-            </div>
-            <div class="Steps-Content">
-                <div class="Steps-step-picture-div">
-                    <img class="Steps-step-picture" src="media/example1.JPG" alt="Step Picture">
-                </div>
-                <div class="Steps-list-wrapper">
-                    <ol class="Steps-List">
-                        <li class="Steps-step step-1">
-                            <div class="Steps-step-number-div">
-                                <p class="step-number-index">1</p>
-                            </div>
-                            <div class="Steps-step-description">
-                                <p class="Steps-step-description-Headline">Find Services</p>
-                                <p class="Steps-step-description-text">Select from any of our industry-leading Services,
-                                    designers, and
-                                    Artists that best fit your personal style and professional needs.</p>
-                            </div>
-                        </li>
-                        <li class="Steps-step step-2">
-                            <div class="Steps-step-number-div">
-                                <p class="step-number-index">2</p>
-                            </div>
-                            <div class="Steps-step-description">
-                                <p class="Steps-step-description-Headline">Offer Services</p>
-                                <p class="Steps-step-description-text">Explore which tools you want to add—whether it’s
-                                    setting up an online store,
-                                    booking services, or adding your favorite third-party extensions.</p>
-                            </div>
-                        </li>
-                        <li class="Steps-step step-3">
-                            <div class="Steps-step-number-div">
-                                <p class="step-number-index">3</p>
-                            </div>
-                            <div class="Steps-step-description">
-                                <p class="Steps-step-description-Headline">Market your Metaverse</p>
-                                <p class="Steps-step-description-text">Stand out in every inbox and social feed.
-                                    On-brand email campaigns and
-                                    social
-                                    tools make it easy to retain customers and grow your audience.</p>
-                            </div>
-                        </li>
-                    </ol>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="Tech-We-Use">
-        <div class="Section-Container TWU-section">
-
-            <h1 id="TWU-Header">
-                TECH WE USE:
-            </h1>
-
-            <div class="TWU-grid-for-boxes">
-
-                <div class="TWU-grids TWU-grid-1">
-                    <div class="TWU-grids-in">
-                        <div class="TWU-Tech-Box TWU-Box-1">
-                            <div class="TWU-Tech-Box-div">
-                                <a class="TWU-Box-Text">ETHER</a>
-                                <a class="TWU-Box-Text">MATIC</a>
-                                <a class="TWU-Box-Text">CARDANO</a>
-                                <a class="TWU-Box-Text">SOLANA</a>
-                            </div>
-                        </div>
-                        <div class="TWU-Tech-Box-Title-div">
-                            <a class="TWU-Tech-Box-Title">Cryptocoin</a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="TWU-grids TWU-grid-2">
-                    <div class="TWU-grids-in">
-                        <div class="TWU-Tech-Box TWU-Box-2">
-                            <div class="TWU-Tech-Box-div">
-                                <a class="TWU-Box-Text">ETHEREUM</a>
-                                <a class="TWU-Box-Text">POLYGON</a>
-                            </div>
-                        </div>
-                        <div class="TWU-Tech-Box-Title-div">
-                            <a class="TWU-Tech-Box-Title">Blockchain<br>Smartcontracts</a>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="TWU-grids TWU-grid-3">
-                    <div class="TWU-grids-in">
-                        <div class="TWU-Tech-Box TWU-Box-3">
-                            <img class="TWU-image TWU-NFTMLogo" src="media\NFT-stuff\nft-logo.png"
-                                alt="Nft Manager logo">
-                        </div>
-                        <div class="TWU-Tech-Box-Title-div">
-                            <a class="TWU-Tech-Box-Title">Universal<br>NFT Manager</a>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </div>
     </section>
 
     <!-- FOOTER -->
