some main editorial changes

--- a/html/socials.html
+++ b/html/socials.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <a class="logo-container" href="/index.html"><img class="logo" src="/media/Pers-Logo.svg" alt="logo"></a>
+        <a class="logo-container" href="/index.html"><img class="logo" src="/media/Multroid-Logo.png" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="/html/projects.html">Projects</a></li>
@@ -36,18 +36,18 @@
     <div class="Socials-container">
 
         <div class="image-container">
-            <img src="/media/Myface.JPG" class="Profile-Pic" alt="Photo by Art Hauntington">
+            <img src="/media/Multroid-Logo.png" class="Profile-Pic" alt="Photo by Art Hauntington">
             <div class="">
-                <p class="Socials-Name-Label"><span class=""><strong>Hikmat "Stark" Imanov</strong></span></p>
-                <p class="Socials-Guide-Label"><strong>You can find me here</strong></p>
+                <p class="Socials-Name-Label"><span class=""><strong>MULTROID Technologies</strong></span></p>
+                <p class="Socials-Guide-Label"><strong>You can find Us here</strong></p>
             </div>
 
             <div class="links-container">
-                <a href="mailto:hikiriki29@gmail.com" class="btn-md noMargin" target="_blank"><i
+                <a href="mailto:support@multroid.com" class="btn-md noMargin" target="_blank"><i
                         class="fa-regular fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/hikmat-imanov/" class="btn-md noMargin" target="_blank"><i
+                <a href="https://www.linkedin.com/company/multroid/" class="btn-md noMargin" target="_blank"><i
                         class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/HikiStark" class="btn-md noMargin" target="_blank"><i
+                <a href="https://github.com/Multroid" class="btn-md noMargin" target="_blank"><i
                         class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/hiki_stark/" class="btn-md noMargin" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a>
