--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <div class="container">
         <div class="Hero-section row">
             <div class="Hero-section-text col">
-                <h1 class="heading-1">Hi, my<br>name is <b>Hikmat</b></h1>
-                <p>I'm a <b>creative developer</b> in Weingarten, Germany.</p>
+                <h1 class="heading-1">Precision Automation:<br>Modularity Redefined</h1>
+                <p><b>Adaptable automation</b> tailored for your industry's unique demands.</p>
             </div>
-            <div class="Hero-section-animation col">
-                <img src="media\iron man gif.gif">
-            </div>
+            <!-- <div class="Hero-section-animation col">
+                <img src="media/robot-pic-1.png">
+            </div> -->
         </div>
         <div class="Mission-section row">
             <div class="col Mission-section-col1">
