--- a/html/projects.html
+++ b/html/projects.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <a class="logo-container" href="/index.html"><img class="logo" src="/media/Pers-Logo.svg" alt="logo"></a>
+        <a class="logo-container" href="/index.html"><img class="logo" src="/media/Multroid-Logo.png" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="/html/projects.html">Projects</a></li>
