--- a/html/projects.html
+++ b/html/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Links website</title>
+    <title>MULTROID Products</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/css/predefinitions.css">
@@ -23,13 +23,12 @@
         <a class="logo-container" href="/index.html"><img class="logo" src="/media/Multroid-Logo.png" alt="logo"></a>
         <nav>
             <ul class="nav-links">
-                <li><a href="/html/projects.html">Projects</a></li>
-                <li><a href="/html/aboutme.html">About</a></li>
-                <li><a href="/html/cv.html">CV</a></li>
+                <li><a href="/html/projects.html">Products</a></li>
+                <li><a href="/html/aboutme.html">About Us</a></li>
             </ul>
         </nav>
         <a class="btn-md nav-button" href="/html/socials.html">
-            <span class="btn-label">Contact me</span>
+            <span class="btn-label">Contact Us</span>
         </a>
     </header>
 
