--- a/html/socials.html
+++ b/html/socials.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Links website</title>
+    <title>MULTROID contact</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="/css/predefinitions.css">
@@ -23,13 +23,12 @@
         <a class="logo-container" href="/index.html"><img class="logo" src="/media/Multroid-Logo.png" alt="logo"></a>
         <nav>
             <ul class="nav-links">
-                <li><a href="/html/projects.html">Projects</a></li>
-                <li><a href="/html/aboutme.html">About</a></li>
-                <li><a href="/html/cv.html">CV</a></li>
+                <li><a href="/html/projects.html">Products</a></li>
+                <li><a href="/html/aboutme.html">About Us</a></li>
             </ul>
         </nav>
         <a class="btn-md nav-button" href="/html/socials.html">
-            <span class="btn-label">Contact me</span>
+            <span class="btn-label">Contact Us</span>
         </a>
     </header>
 
@@ -39,7 +38,7 @@
             <img src="/media/Multroid-Logo.png" class="Profile-Pic" alt="Photo by Art Hauntington">
             <div class="">
                 <p class="Socials-Name-Label"><span class=""><strong>MULTROID Technologies</strong></span></p>
-                <p class="Socials-Guide-Label"><strong>You can find Us here</strong></p>
+                <p class="Socials-Guide-Label"><strong>You can find us here</strong></p>
             </div>
 
             <div class="links-container">
